# birdie

./: CDP_IMPLEMENTATION.md  CHROME_SETUP_GUIDE.md  COMPLETION_SUMMARY.md  CONTEXT_MAPPER_EXAMPLES.md  CONTEXT_MAPPER_GUIDE.md  CONTEXT_MAPPER_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PASO1_IMPLEMENTADO.md  PASO2_STATUS.md  PASO3_COMPLETO.md  PASO4_PARSEO_COMPLETO.md  PASO8_STT_IMPLEMENTATION.md  QUICK_START.md  STT_QUICK_START.md  VISION_EXAMPLES.md  VISION_MODULE_GUIDE.md  VISION_QUICK_REFERENCE.md  WINDOWS_IMPLEMENTATION.md  package-lock.json  package.json  start-chrome-debug.bat  start-chrome-debug.sh
.claude/: settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  capabilities.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cdp.rs  context_mapper.rs  lib.rs  main.rs  stt.rs  vision.rs
src-tauri/src/notifications/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: CDPPanel.tsx  CurrentNotification.tsx  NotificationItem.tsx  NotificationList.tsx  PlaybackControls.tsx  VoiceRecorder.tsx
src/hooks/: useCDP.ts  useGlobalShortcut.ts  useNotifications.ts  useSpeechToText.ts  useVoiceRecorder.ts
src/types/: cdp.ts  notification.ts  stt.ts
